--- a/core/templates/campaign_widget_content.html
+++ b/core/templates/campaign_widget_content.html
@@ -9,10 +9,10 @@
    <script type="text/javascript" src="http://www.ripplefunction.com/site_media/javascript/embed-iframe.js"></script>
 </div>
 
+<h2>Design Widget Below </h2>
 <div id="widget-features">
     <ul>
     <li>
-        <label for="message">Design Widget Look and Feel&nbsp;&nbsp; </label>
         <textarea id="widget-message" ></textarea>&nbsp;&nbsp;
     </li>
     <li>
@@ -57,7 +57,7 @@
 
 <script>
 
-  $("#getcode").text("<Get Embeddable Code>");
+  $("#getcode").text("Embeddable Code");
   
  
 
