--- a/static/css/campaign_admin.css
+++ b/static/css/campaign_admin.css
@@ -22,6 +22,12 @@ div#admin-header h1{
     font-size: 40px;
 }
 
+div#display-radio {
+    font-size: 26px;
+    text-align: center;
+    font-weight: bold;
+}
+
 div#admin-info {
    background-color: white;
    width: 80%; 
