--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -40,8 +40,26 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <input type="radio" name="display_type" id="radio_widget" value="widget" /> Widget
 </div>
-<br/><br/>
+<br/>
+<div id="landing-instructions">
+  <br/>
+  <ul>
+    <li>Edit Landing Page Details.</li>
+    <li>Preview the Page.</li>  
+    <li>Send out link to your friends and share it on twitter/facebook.</li>  
+  </ul>
+  <br/>
+</div>
 
+<div id="widget-instructions">
+  <br/>
+  <ul>
+    <li>Design Widget Look & Feel.</li>
+    <li>Embed Widget into your webpage.</li>  
+  </ul>
+  <br/>
+</div>
+<br/>
 <ul class="tabs">
   <li id="tabs-edit"><a href="#first">Edit</a></li>
   <li id="tabs-landing"><a id="landing_click" href="#second">Landing Page</a></li>
@@ -228,16 +246,21 @@ if ($("#winners-wrapper").is(":hidden")) {
 
     });
 
+$('#landing-instructions').show();
 $('#tabs-widget').hide();
 $('#radio_landing').change(function(){
        $('#tabs-widget').hide();
        $('#tabs-landing').show();
        $('#tabs-edit').show();
+       $('#landing-instructions').show();
+       $('#widget-instructions').hide();
 });
 $('#radio_widget').change(function(){
        $('#tabs-widget').show();
        $('#tabs-landing').hide();
        $('#tabs-edit').hide();
+       $('#landing-instructions').hide();
+       $('#widget-instructions').show();
 });
 </script>
 
