Changign instructions messaging.

--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -46,7 +46,13 @@
   <ol>
     <li>Edit Landing Page Details.</li>
     <li>Preview the Page.</li>  
-    <li>Send out link to your friends and share it on twitter/facebook.</li>  
+    <li>Launch Campaign: 
+      <ul>
+	<li>Send Landing Page link to Friends.</li>
+	<li>Share link on facebook and Tweet link on twitter.</li>
+	<li>Watch campaign go viral!</li>
+      </ul>
+    </li>  
   </ol>
   <br/>
 </div>
