--- a/core/templates/campaign_admin2.html
+++ b/core/templates/campaign_admin2.html
@@ -49,7 +49,7 @@
       <ul>
 	<li>Send Landing Page link to Friends.</li>
 	<li>Share link on facebook and Tweet link on twitter.</li>
-	<li>Watch campaign go viral!</li>
+	<li>Watch invite spread!</li>
       </ul>
     </li>  
   </ol>
