--- a/core/templates/campaign_edit_content.html
+++ b/core/templates/campaign_edit_content.html
@@ -11,7 +11,7 @@
 			</li>
 		         <li>
 
-			       {% ifequal campaign.template '2' %}
+			       {% ifequal campaign.template 2 %}
 				<label for="title">Promotion Message: </label> <br />
 				<b>Instant</b>&nbsp;&nbsp;&nbsp;<input type="text" size="60" value="{{campaign.title}}" name="title" class="required" />&nbsp;&nbsp;&nbsp;<b>just by sharing!</b>
 			       {% else %}
