--- a/templates/core/widget.html
+++ b/templates/core/widget.html
@@ -18,7 +18,7 @@
 		  <div id="fb-root"></div>
            
                     {% if fbuser %}
-                    <div id="div-facebook-logged-in" class="showing"
+                    <div id="div-facebook-logged-in" class="showing">
                     {% else  %}
                     <div id="div-facebook-logged-in" class="hiding">
                     {% endif %}
