--- a/templates/internal_analytics/data.html
+++ b/templates/internal_analytics/data.html
@@ -153,7 +153,9 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 	     		success: function(data) {
 	     			var json_data = new google.visualization.DataTable(data.data, 0.5);
 	     			data_table.draw(json_data, 
-	     			     {width: 340,   
+	     			     {title: "Facebook vs Twitter",
+                                     width: 340,
+	                             fontSize: 14,
 	     			     is3D: true,
                                      pieSliceText: 'value',
                                      colors:['green','blue']});
@@ -176,9 +178,10 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 	     		success: function(data) {
 	     			var json_data = new google.visualization.DataTable(data.data, 0.5);
 	     			data_table.draw(json_data, 
-	     			     {title: "",
+	     			     {title: "Discounts vs Raffles",
                                      width: 340, height: 200,   
 	     			     is3D: true,
+	                             fontSize: 14,
                                      pieSliceText: 'value',
 	                             colors:['orange','red']});
 	     		},
@@ -191,10 +194,10 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 	     	});		
 	     }
 
-             function drawLineShares(start, end, show_loading) {
+             function drawLineShares(start, end, show_loading, range_duration) {
 	     	var data_table = new google.visualization.LineChart(document.getElementById('line-chart-totalshares'));
 	     	$.ajax({
-	     		url: '{% url internal_analytics_totalshares_pie %}?start=' + start + '&end=' + end, 
+	     		url: '{% url internal_analytics_totalshares_line %}?start=' + start + '&end=' + end + '&range_duration=' + range_duration, 
 	     		dataType: "json",
 	     		data: {},
 	     		success: function(data) {
@@ -202,6 +205,7 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 	     			data_table.draw(json_data, 
 	     			     {title: "Shares Over Time",
 	                             width: 340,   
+	                             fontSize: 14,
 	     			     is3D: true,
                                      pieSliceText: 'value',
                                      colors:['green','blue']});
@@ -211,7 +215,32 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
                                 $("#line-chart-totalshares").showLoading({'afterShow': function(){ setTimeout( "jQuery('#line-chart-totalshares').hideLoading()", 500 );}});         
                             }
 	     		}
+	     
+	     	});		
+	     }
 
+             function drawLineCreated(start, end, show_loading, range_duration) {
+	     	var data_table = new google.visualization.LineChart(document.getElementById('line-chart-campaignscreated'));
+	     	$.ajax({
+	     		url: '{% url internal_analytics_campaignscreated_line %}?start=' + start + '&end=' + end + '&range_duration=' + range_duration, 
+	     		dataType: "json",
+	     		data: {},
+	     		success: function(data) {
+	     			var json_data = new google.visualization.DataTable(data.data, 0.5);
+	     			data_table.draw(json_data, 
+	     			     {title: "Shares Over Time",
+	                             width: 340,   
+	                             fontSize: 14,
+	     			     is3D: true,
+                                     pieSliceText: 'value',
+                                     colors:['green','blue']});
+	     		},
+	     		beforeSend: function() {
+	                    if (show_loading) {
+                                $("#line-chart-campaignscreated").showLoading({'afterShow': function(){ setTimeout( "jQuery('#line-chart-campaignscreated').hideLoading()", 500 );}});         
+                            }
+	     		}
+	     
 	     	});		
 	     }
 
@@ -222,7 +251,9 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
              function drawGraphs() {
 	     	drawPieShares($('#datepicker_start_totalshares').val(), $('#datepicker_end_totalshares').val(), false);
 	        drawPieCampaignsCreated($('#datepicker_start_campaigns_created').val(), $('#datepicker_end_campaigns_created').val(), false);
-	        //drawPieCampaignsModified($('#datepicker_start_campaigns_modified').val(), $('#datepicker_end_campaigns_modified').val());
+
+	        drawLineShares($('#datepicker_start_totalshares').val(), $('#datepicker_end_totalshares').val(), false, $('#share-chart-date-type :selected').text());
+	        drawLineCreated($('#datepicker_start_campaigns_created').val(), $('#datepicker_end_campaigns_created').val(), false, $('#campaignscreated-chart-date-type :selected').text());
 	     }
 
 
@@ -230,10 +261,12 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 	     // refresh buttons click
 	     $('#total_shares_refresh').click(function(){
 	     	drawPieShares($('#datepicker_start_totalshares').val(), $('#datepicker_end_totalshares').val(), true);
+	        drawLineShares($('#datepicker_start_totalshares').val(), $('#datepicker_end_totalshares').val(), true, $('#share-chart-date-type:selected').text());
              });
 
              $('#campaigns_created_refresh').click(function(){
 	        drawPieCampaignsCreated($('#datepicker_start_campaigns_created').val(), $('#datepicker_end_campaigns_created').val(), true);
+	        drawLineCreated($('#datepicker_start_campaigns_created').val(), $('#datepicker_end_campaigns_created').val(), true, $('#campaignscreated-chart-date-type :selected').text());
              });
 
 	     // choose default dates to graph
