Changing titles for campaign.

--- a/templates/internal_analytics/data.html
+++ b/templates/internal_analytics/data.html
@@ -119,7 +119,7 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 
   </div> <!-- end data-content -->
 
-  <h3><a id="campaigns_modified" href="#">Campaigns Modified</a></h3>
+  <h3><a id="campaigns_modified" href="#">Clicks/Page Views</a></h3>
   <div id="data-content-campaigns-modified" class="data-content">
     <div class="dates">  
       <p>From: <input type="text" value="{{start}}" id="datepicker_start_campaigns_modified"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -133,7 +133,7 @@ $("#datepicker_end_campaigns_modified").datepicker({ gotoCurrent: true,
 
   </div> <!-- end data-content -->
 
-  <h3><a href="#">Section 4</a></h3>
+  <h3><a href="#">Percent Shares/Reach</a></h3>
   <div class="data-content">
     
     </div>
